--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,14 +1,13 @@
 {
   "extends": "../tsconfig.json",
   "compilerOptions": {
-    "composite": true,
     "outDir": "./.tsbuild",
     "module": "ESNext",
     "moduleResolution": "Bundler",
     "jsx": "react-jsx",
     "types": ["vite/client"],
     "baseUrl": "..",
-    "rootDir": "..",
+    "skipLibCheck": true,
     "paths": {
       "@/*": ["./client/src/*"],
       "@shared/*": ["./shared/*"],
